# hlci

./: LICENSE  README.md  hlci.cabal
app/: Main.hs
src/Language/LOLCODE/: Interpreter.hs  Lexer.hs  Parser.hs  Syntax.hs
test/: Spec.hs  lci_suite.py
test/Language/LOLCODE/Interpreter/: Tests.hs
test/Language/LOLCODE/Parser/: Tests.hs
