name:                hlci
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hlci#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Language.LOLCODE.Lexer
                     , Language.LOLCODE.Parser
                     , Language.LOLCODE.Syntax
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
  default-language:    Haskell2010

executable hlci-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hlci
                     , haskeline
                     , mtl
  default-language:    Haskell2010

test-suite hlci-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Language.LOLCODE.Parser.Tests
  main-is:             Spec.hs
  build-depends:       base
                     , hlci
                     , HUnit
                     , tasty
                     , tasty-hunit
                     , raw-strings-qq
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hlci
