name:                hlci
version:             0.1.0.0
synopsis:            A LOLCODE interpreter
description:         Please see README.md
homepage:            https://github.com/YS-L/hlci
license:             BSD3
license-file:        LICENSE
author:              Yung Siang Liau
maintainer:          liauys@gmail.com
copyright:           2017 Yung Siang Liau
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.LOLCODE.Lexer
                     , Language.LOLCODE.Parser
                     , Language.LOLCODE.Syntax
                     , Language.LOLCODE.Interpreter
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , mtl
                     , containers
                     , MissingH
  default-language:    Haskell2010

executable hlci
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hlci
                     , mtl
  default-language:    Haskell2010

test-suite hlci-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Language.LOLCODE.Parser.Tests
                     , Language.LOLCODE.Interpreter.Tests
  main-is:             Spec.hs
  build-depends:       base
                     , hlci
                     , HUnit
                     , tasty
                     , tasty-hunit
                     , raw-strings-qq
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/YS-L/hlci
